# NEAT-plus-plus

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  NEAT-paper  README.md
.github/workflows/: c-cpp.yml
inc/: CMakeLists.txt  eval-interface.hpp  gene.hpp  genotype.hpp  graph-network.hpp  prob.hpp  utility.hpp  xor-game.hpp
src/: CMakeLists.txt  gene.cpp  genotype.cpp  graph-network.cpp  main.cpp  prob.cpp  utility.cpp  xor-game.cpp
